--- a/lib/mugwarrior_web/templates/auth/user/new.html.eex
+++ b/lib/mugwarrior_web/templates/auth/user/new.html.eex
@@ -1,5 +1,5 @@
 <div class="container">
-  <h2>Log In</h2>
+  <h2><%= gettext("Log In") %></h2>
 
   <%= render MugwarriorWeb.SharedView, "user_form.html", Map.put(assigns, :action, Routes.auth_user_path(@conn, :create)) %>
 </div>
